@@ -1,6 +1,6 @@
 use warnings;
 use strict;
-use Test::More tests => 4;
+use Test::More tests => 5;
 use Glib qw(TRUE FALSE);     # To get TRUE and FALSE
 use Gtk2 -init;              # Could just call init separately
 use Sane 0.05;               # To get SANE_* enums
@@ -38,5 +38,11 @@ $dialog->set( 'side-to-scan', 'reverse' );
 $dialog->set( 'sided', 'single' );
 is $dialog->get('side-to-scan'), 'facing',
   'selecting single sided also selects facing';
+
+$dialog->{checkx}->set_active(TRUE);
+$dialog->set( 'page-number-increment', 3 );
+$dialog->{checkx}->set_active(FALSE);
+is $dialog->get('page-number-increment'), 2,
+  'turning off extended page numbering resets increment';
 
 __END__
