@@ -5,6 +5,7 @@
 * Integrate user-defined tools into scan post-process
 * + dialog window for user-defined tools
     and move tool management there from Edit/Preferences
+* Fixed extended page numbering toggle
 
 
 1.3.9 (06.03.2016):
